# FinSight

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/app/: agent.py  agent_doc.md  prompts.py  simple_agent.py  state.py  todo_tools.py  utils.py
src/app/tools/: file_tools.py  financial_tools.py  math.py  real_estate_tools.py  research_tools.py  task_tool.py  todo_tools.py
tests/: conftest.py  simple_testing_agent.py
tests/integration_tests/: test_trajectories_async.py
tests/unit_tests/: test_tools.py
