[project]
name = "finsight"
version = "0.1.0"
description = ""
authors = [
    {name = "lbatresm"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=0.3.6,<0.4.0)",
    "langchain-cohere (>=0.3,<0.4)",
    "langchain-openai (>=0.3.6,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langgraph (>=0.2.20,<0.3.0)",
    "deepagents (>=0.0.3,<0.0.4)",
    "rich (>=14.1.0,<15.0.0)",
    "markdownify (>=1.2.0,<2.0.0)",
    "tavily-python (>=0.7.12,<0.8.0)",
    "langchain-community (>=0.3.30,<0.4.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=0.23.8,<0.24.0)",
    "agentevals (>=0.0.9,<0.0.10)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
